--- a/index.html
+++ b/index.html
@@ -23,13 +23,22 @@
           loading="lazy">
         <span class="ms-2">gregslistAsync</span>
       </a>
-      <button class="btn btn-primary" onclick="app.carsController.showCars()">Cars</button>
+      <button class="btn btn-primary me-3" onclick="app.carsController.showCars()">Cars</button>
+      <button class="btn btn-primary me-3" onclick="app.housesController.showHouses()">Houses</button>
+      <button class="btn btn-primary me-3" onclick="app.jobsController.showJobs()">Jobs</button>
     </nav>
   </header>
   <main>
     <div class="container-fluid">
-      <div class="row my-3">
-        <div class="col-6 m-auto" id="listing-form">
+
+      <section class="row my-3">
+        <div class="col-2">
+          <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#listing-form"
+            aria-expanded="false" aria-controls="listing-form">
+            Show Form
+          </button>
+        </div>
+        <div class="col-6 m-auto collapse" id="listing-form">
           <!-- NOTE form for our current listing type -->
           <!-- <form onsubmit="app.carsController.createCar()">
             <div class="form-floating mb-3">
@@ -70,7 +79,7 @@
             <button type="reset" class="btn btn-outline-danger mt-3">Reset</button>
           </form> -->
         </div>
-      </div>
+      </section>
       <div class="row" id="listings">
         <!-- FIXME Step 3: Build out a template for our model -->
         <!-- STUB Car template -->
@@ -98,6 +107,7 @@
     </div>
   </footer>
 
+  <!-- NOTE axios import -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.23.0/axios.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
